--- a/net.akehurst.node4java/build.gradle
+++ b/net.akehurst.node4java/build.gradle
@@ -15,6 +15,8 @@
  */
 buildscript {
     repositories {
+        mavenLocal()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -31,7 +33,7 @@ subprojects {
 
 
 	group 'net.akehurst.node4java'
-	version '1.2.0-SNAPSHOT'
+	version '1.0.0-SNAPSHOT'
 
 	sourceCompatibility = '1.8'
 	targetCompatibility = '1.8'
